--- a/css/style.scss
+++ b/css/style.scss
@@ -3,8 +3,287 @@
 }
 
 html, body{
+    background-color: #F0EFE9;
+
     margin: 0;
+
     font-size: 16px;
     font-weight: 400;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header{
+    margin: auto;
+
+
+    height: 120px;
+    width: 1300px;
+
+    display: flex;
+
+    @media (max-width: 500px){
+        position: relative;
+
+        width: 100%;
+    }
+
+    img{
+        width: 137px;
+
+        margin-right: 3vw;
+
+        @media (max-width: 500px){
+            margin-left: 3vw;
+        }
+    }
+    .header{
+
+        position:relative;
+        
+
+        width: 100%;
+
+        @media (max-width: 500px){
+            position: static;
+        }
+        .contact{
+            display: flex;
+
+            margin-top: 12px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #cacaca;
+
+            @media (max-width: 500px){
+                display:none;
+            }
+        }
+        .info{
+            width: 200px;
+
+            margin-left: 0.2vw;
+            margin-right: 0.2vw;
+
+            font-size: 15px;
+
+            position: relative;
+            &::after{
+                content: '';
+
+                position: absolute;
+                right: 0;
+
+                width: 1px;
+                height: 90%;
+                
+                background-color: #cacaca;
+
+            }
+
+            i{
+                margin: 0.1vw;
+
+                font-size: 20px;
+
+                color: #191919;
+            }
+        }
+        #location-social{
+            width: calc(100% - 185px*2);
+
+            display:flex;
+            justify-content: space-between;
+
+            &::after{
+                display:none;
+
+            }
+
+            .social{
+                i{
+                    font-size: 16px;
+
+                    margin-right: 0.3vw;
+
+                    &:hover{
+                        color: #5a5a5a;
+                    }
+                }
+            }
+        }
+        .nav{
+            width: 100%;
+
+            
+            justify-content: space-between;
+
+            position:absolute;
+            bottom: 0;
+
+            @media(min-width: 501px){ //Var tvungen att lägga till denna media query för att elementet inte skulle förbli "display: block" efter att man använt meny-knappen
+                display: flex !important; //Utan !important förblir elementet "display:block" i vissa fall
+            }
+
+            @media(max-width: 500px){
+                display:none;
+                
+                background-color: rgba(0, 0, 0, 0.089);
+
+                top: 120px;
+                left: 0;
+
+                height: 375px;
+
+                
+            }
+
+            
+
+            nav{
+                width: 306px;
+
+                display:flex;
+                justify-content: space-between;
+
+                @media(max-width: 500px){
+
+                    width: 100%;
+
+                    display:block;
+                    
+                }
+
+
+                
+                a{
+                    text-decoration: none;
+                    color: #191919;
+
+                    margin-bottom: 11px;
+
+                    position:relative;
+
+                    @media (max-width: 500px){
+                        text-align: center;
+
+                        margin: 0;
+
+                        width: 100%;
+
+                        padding-top: 27px;
+                        padding-bottom: 27px;
+
+                        display:block;
+
+                        font-size: 1.1rem;
+
+                        &:hover{
+                            background-color: rgba(0, 0, 0, 0.089);
+                        }
+
+                        
+                    }
+
+                    &:hover::after{
+                        content: '';
+    
+                        margin:auto;
+                        
+    
+                        position:absolute;
+                        bottom: 13px;
+                        right: 0;
+                        left: 0;
+    
+                        width: 60%;
+                        height: 2px;
+    
+                        background-color: #191919;
+
+                        @media (max-width: 500px){
+                            display:none;
+                        }
+
+
+                    }
+
+                }
+
+                #here::after{
+                    content: '';
+
+                    margin:auto;
+                    
+
+                    position:absolute;
+                    bottom: 13px;
+                    right: 0;
+                    left: 0;
+
+                    width: 40%;
+                    height: 2px;
+
+                    background-color: #191919;
+
+                    @media (max-width: 500px){
+                        display:none;
+                    }
+
+                }
+            }
+            .login-button{
+
+                width: 122px;
+                height: 48px;
+
+                border-radius: 30px;
+
+                margin-right: 9px;
+
+                text-decoration: none;
+                color: black;
+                
+                display:flex;
+                justify-content: center;
+                align-items: center;
+
+                background-color: #F9D783;
+
+                @media (max-width: 500px){
+                    margin: auto;
+                }
+                i{
+                    margin-left: 13px;
+                }
+                &:hover{
+                    background-color: #191919;
+                    color: #F0EFE9;
+                }
+            }
+            
+        }
+        .menu{
+            border: none;
+            
+            position: absolute;
+            right: 3vw;
+            top: 35px;
+
+            background-color: transparent;
+
+            border-radius: 5px;
+
+            @media (min-width: 501px){
+                display:none;
+            }
+
+            &:hover{
+                background-color: rgba(0, 0, 0, 0.151);
+                cursor: pointer;
+            }
+
+            i{
+                font-size: 2.8rem;
+            }
+        }
+    }
 }
