--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,32 @@ html, body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.login-button {
+  width: 122px;
+  height: 48px;
+  border-radius: 30px;
+  margin-right: 9px;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F9D783;
+}
+@media (max-width: 500px) {
+  .login-button {
+    margin: auto;
+    margin-top: 18px;
+  }
+}
+.login-button i {
+  margin-left: 13px;
+}
+.login-button:hover {
+  background-color: #191919;
+  color: #F0EFE9;
+}
+
 header {
   margin: auto;
   height: 120px;
@@ -29,6 +55,7 @@ header img {
 @media (max-width: 500px) {
   header img {
     margin-left: 3vw;
+    width: 270px;
   }
 }
 header .header {
@@ -100,10 +127,11 @@ header .header .nav {
 @media (max-width: 500px) {
   header .header .nav {
     display: none;
-    background-color: rgba(0, 0, 0, 0.089);
+    background-color: rgba(240, 239, 233, 0.9647058824);
+    z-index: 999;
     top: 120px;
     left: 0;
-    height: 375px;
+    height: 410px;
   }
 }
 header .header .nav nav {
@@ -134,7 +162,7 @@ header .header .nav nav a {
     font-size: 1.1rem;
   }
   header .header .nav nav a:hover {
-    background-color: rgba(0, 0, 0, 0.089);
+    background-color: rgba(0, 0, 0, 0.068);
   }
 }
 header .header .nav nav a:hover::after {
@@ -169,30 +197,6 @@ header .header .nav nav #here::after {
     display: none;
   }
 }
-header .header .nav .login-button {
-  width: 122px;
-  height: 48px;
-  border-radius: 30px;
-  margin-right: 9px;
-  text-decoration: none;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #F9D783;
-}
-@media (max-width: 500px) {
-  header .header .nav .login-button {
-    margin: auto;
-  }
-}
-header .header .nav .login-button i {
-  margin-left: 13px;
-}
-header .header .nav .login-button:hover {
-  background-color: #191919;
-  color: #F0EFE9;
-}
 header .header .menu {
   border: none;
   position: absolute;
@@ -207,9 +211,99 @@ header .header .menu {
   }
 }
 header .header .menu:hover {
-  background-color: rgba(0, 0, 0, 0.151);
+  background-color: rgba(0, 0, 0, 0.068);
   cursor: pointer;
 }
 header .header .menu i {
   font-size: 2.8rem;
+}
+
+section {
+  position: relative;
+}
+section .element {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+}
+@media (max-width: 500px) {
+  section .element {
+    display: none;
+  }
+}
+section .showcase-section {
+  width: 1300px;
+  margin: auto;
+  display: flex;
+}
+@media (max-width: 500px) {
+  section .showcase-section {
+    width: 100%;
+  }
+}
+section .showcase-section .showcase h1 {
+  font-size: 86px;
+  margin: 0;
+  margin-top: 100px;
+}
+@media (max-width: 500px) {
+  section .showcase-section .showcase h1 {
+    font-size: 3rem;
+    margin: 10px;
+    text-align: center;
+  }
+}
+section .showcase-section .showcase p {
+  margin: 0;
+  margin-top: 17px;
+  margin-bottom: 45px;
+  font-size: 20px;
+  color: #191919;
+}
+@media (max-width: 500px) {
+  section .showcase-section .showcase p {
+    text-align: center;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 35px;
+  }
+}
+section .showcase-section .showcase .showcase-buttons-section {
+  display: flex;
+}
+@media (max-width: 500px) {
+  section .showcase-section .showcase .showcase-buttons-section {
+    display: block;
+  }
+}
+section .showcase-section .showcase .showcase-buttons-section a {
+  width: 200px;
+  height: 60px;
+  margin-right: 15px;
+}
+@media (max-width: 500px) {
+  section .showcase-section .showcase .showcase-buttons-section a {
+    margin: auto;
+    margin-bottom: 20px;
+  }
+}
+section .showcase-section .showcase .showcase-buttons-section #learn-more {
+  background-color: transparent;
+  border: 1px solid black;
+  width: 180px;
+}
+section .showcase-section .showcase .showcase-buttons-section #learn-more:hover {
+  color: black;
+  border: 1px solid rgb(110, 110, 110);
+  background-color: rgba(0, 0, 0, 0.048);
+}
+section .showcase-section img {
+  margin-top: 40px;
+  margin-right: -50px;
+}
+@media (max-width: 500px) {
+  section .showcase-section img {
+    display: none;
+  }
 }
