--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,26 @@ html, body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+p{
+    line-height: 30px;
+}
+
+h6{
+    color: red;
+
+    margin: 0;
+
+    font-size: 17px;
+    font-weight: 600;
+}
+
+h2{
+    font-size: 42px;
+
+    margin: 0;
+    margin-top: 15px;
+    margin-bottom: 33px;
+}
 .login-button{
     width: 122px;
     height: 48px;
@@ -28,15 +48,6 @@ html, body{
     align-items: center;
 
     background-color: #F9D783;
-
-    @media (max-width: 992px){
-        width: 110px;
-    }
-
-    @media (max-width: 768px){
-        margin: auto;
-        margin-top: 18px;
-    }
 
     i{
         margin-left: 13px;
@@ -188,6 +199,17 @@ header{
     
                 position:absolute;
                 bottom: 0;
+
+                .login-button{
+                    @media (max-width: 992px){
+                        width: 110px;
+                    }
+                
+                    @media (max-width: 768px){
+                        margin: auto;
+                        margin-top: 18px;
+                    }
+                }
     
                 @media(min-width: 769px){ //Var tvungen att lägga till denna media query för att elementet inte skulle förbli "display: block" efter att man använt meny-knappen
                     display: flex !important; //Utan !important förblir elementet "display:block" i vissa fall
@@ -308,6 +330,8 @@ header{
                 background-color: transparent;
     
                 border-radius: 5px;
+
+                cursor: pointer;
     
                 @media (min-width: 769px){
                     display:none;
@@ -315,7 +339,6 @@ header{
     
                 &:hover{
                     background-color: rgba(0, 0, 0, 0.068);
-                    cursor: pointer;
                 }
     
                 i{
@@ -350,7 +373,7 @@ header{
     }
 
     .showcase-container{
-        width: 1300px;
+        width: 1280px;
 
         margin: auto;
 
@@ -513,8 +536,7 @@ header{
 
     background-color: white;
 
-    margin-top: 72px;
-    margin-bottom: 72px;
+    margin: 72px 0;
 
     .logo-container{
         width: 100%;
@@ -581,25 +603,12 @@ header{
             }
    
             h6{
-                color: red;
-
-                margin: 0;
-
-                font-size: 17px;
-                font-weight: 600;
-
-                @media(max-width: 1200px){
+                 @media(max-width: 1200px){
                     text-align: center;
                 }
             }
 
             h2{
-                font-size: 42px;
-
-                margin: 0;
-                margin-top: 15px;
-                margin-bottom: 33px;
-
                 @media(max-width: 1200px){
                     text-align: center;
 
@@ -645,6 +654,8 @@ header{
         @media(max-width: 768px){
             grid-template-columns: 1fr;
             grid-template-rows: repeat(4, 1fr);
+
+            margin-bottom: 30px;
         }
 
 
@@ -686,8 +697,145 @@ header{
 
             p{
                 margin: 0;
+
+                color: #4e4e4e;
             }
         }
     }
     
+}
+
+.about-section{
+    width: 95%;
+    max-width: 1320px;
+
+    margin: 110px auto;
+
+    display:grid;
+    justify-content: space-around;
+    grid-template-columns: repeat(auto-fit, 600px);
+
+    @media (max-width: 768px){
+        
+    }
+
+    .woman-container{
+        position:relative;
+        margin: 0 30px 0 30px;
+
+        max-width: 533px;
+
+        .woman{
+            @media (max-width: 768px){
+                
+            }
+        }
+
+        .element{
+            position:absolute;
+            top:40px;
+            left: -30px;
+        }
+    
+        .founder{
+            position:absolute;
+            left: -50px;
+            bottom: 45px;
+    
+            width: 368px;
+    
+            background-color: #BEEBFF;
+    
+            box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
+            -webkit-box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
+            -moz-box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
+    }
+
+        h4{
+
+            margin: 30px 0 20px 30px;
+
+            font-size: 20px;
+
+            span{
+                font-size: 16px;
+
+                color: red;
+            }
+        }
+
+        p{
+            margin: 0 0 40px 30px;
+        }
+    }
+
+    .about-container{
+        display:grid;
+        grid-template-rows: auto auto 1fr auto;
+
+        margin-left: 30px;
+        margin-top: 30px;
+
+        max-width: 533px;
+
+        @media (max-width: 768px){
+            
+        }
+
+        h2{
+            margin-bottom: 25px;
+        }
+
+        p{
+            color:#4e4e4e;
+
+            margin-top: 0;
+            margin-bottom: 30px;
+        }
+
+        .about-buttons{
+            display:flex;
+
+            #learn-more{
+                width: 180px;
+
+                background-color: #191919;
+
+                color: white;
+
+                margin-right: 20px;
+
+                &:hover{
+                    background-color:white;
+                    color:#191919;
+
+                    border: 1px solid black;
+                }
+            }
+
+            button{
+                width: 48px;
+                height: 48px;
+
+                margin: 0 20px;
+
+                border: 1px solid black;
+                border-radius: 50%;
+
+                background-color: white;
+
+                cursor: pointer;
+
+                &:hover{
+                    background-color:#191919;
+                    color:white;
+                }
+            }
+            p{
+                margin:auto 0;
+            }
+        }
+    }
+
+
 }
