--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,8 @@ html, body{
 
 p{
     line-height: 30px;
+
+    color:#4e4e4e;
 }
 
 h6{
@@ -32,6 +34,7 @@ h2{
     margin-top: 15px;
     margin-bottom: 33px;
 }
+
 .login-button{
     width: 122px;
     height: 48px;
@@ -56,6 +59,40 @@ h2{
     &:hover{
         background-color: #191919;
         color: #F0EFE9;
+    }
+}
+
+.learn-more{
+    background-color: transparent;
+
+    border: 1px solid black;
+
+    width: 180px;
+
+    &:hover{
+        color: black;
+
+        border: 1px solid rgb(110, 110, 110);
+
+        background-color: rgba(0, 0, 0, 0.048);
+    }
+}
+
+.element{
+    width: 650px;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    pointer-events: none; //Detta för att man ska kunna klicka på knapparna när de egentligen ligger bakom denna bilden
+
+    @media (max-width: 1400px){
+        width: 500px;
+    }
+
+    @media (max-width: 768px){
+        display:none;
     }
 }
 
@@ -354,24 +391,6 @@ header{
 
     background-color: #F0EFE9;
 
-    .element{
-        width: 650px;
-
-        position: absolute;
-        bottom: 0;
-        left: 0;
-
-        pointer-events: none; //Detta för att man ska kunna klicka på knapparna när de egentligen ligger bakom denna bilden
-
-        @media (max-width: 1400px){
-            width: 500px;
-        }
-
-        @media (max-width: 768px){
-            display:none;
-        }
-    }
-
     .showcase-container{
         width: 1280px;
 
@@ -485,22 +504,6 @@ header{
                     @media (max-width: 768px){
                         margin: auto;
                         margin-bottom: 20px;
-                    }
-                }
-
-                #learn-more{
-                    background-color: transparent;
-
-                    border: 1px solid black;
-
-                    width: 180px;
-
-                    &:hover{
-                        color: black;
-
-                        border: 1px solid rgb(110, 110, 110);
-
-                        background-color: rgba(0, 0, 0, 0.048);
                     }
                 }
             }
@@ -697,8 +700,6 @@ header{
 
             p{
                 margin: 0;
-
-                color: #4e4e4e;
             }
         }
     }
@@ -716,7 +717,7 @@ header{
     grid-template-columns: repeat(auto-fit, 600px);
 
     @media (max-width: 768px){
-        
+        grid-template-columns: 1fr;
     }
 
     .woman-container{
@@ -725,9 +726,15 @@ header{
 
         max-width: 533px;
 
+        @media (max-width: 768px){
+            width: 350px;
+
+            margin: auto;
+        }
+
         .woman{
             @media (max-width: 768px){
-                
+                width: 350px;
             }
         }
 
@@ -735,6 +742,13 @@ header{
             position:absolute;
             top:40px;
             left: -30px;
+
+            @media (max-width: 768px){
+                width: 150px;
+
+                top: 30px;
+                left: -20px;
+            }
         }
     
         .founder{
@@ -749,6 +763,13 @@ header{
             box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
             -webkit-box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
             -moz-box-shadow: -9px 11px 19px 5px rgba(0, 0, 0, 0.1);
+
+            @media (max-width: 768px){
+                left: 0;
+                bottom: 0;
+
+                width: 350px;
+            }
     }
 
         h4{
@@ -779,22 +800,44 @@ header{
         max-width: 533px;
 
         @media (max-width: 768px){
-            
+            margin: 30px auto;
+        }
+
+        h6{
+            @media (max-width: 768px){
+                text-align:center;
+            }
         }
 
         h2{
             margin-bottom: 25px;
+
+            @media (max-width: 768px){
+                text-align:center;
+
+                margin-right: 8px;
+                margin-left: 8px;
+            }
         }
 
         p{
-            color:#4e4e4e;
-
             margin-top: 0;
             margin-bottom: 30px;
+
+            @media (max-width: 768px){
+                margin-right: 8px;
+                margin-left: 8px;
+            }
+            
         }
 
         .about-buttons{
             display:flex;
+
+            @media (max-width: 768px){
+                margin-right: 8px;
+                margin-left: 8px;
+            }
 
             #learn-more{
                 width: 180px;
@@ -810,6 +853,10 @@ header{
                     color:#191919;
 
                     border: 1px solid black;
+                }
+
+                @media (max-width: 768px){
+                    margin-right: 10px;
                 }
             }
 
@@ -830,6 +877,10 @@ header{
                     background-color:#191919;
                     color:white;
                 }
+
+                @media (max-width: 768px){
+                    margin: 0 15px;
+                }
             }
             p{
                 margin:auto 0;
@@ -838,4 +889,135 @@ header{
     }
 
 
+}
+
+.services-section{
+    background-color: #F0EFE9;
+
+    position:relative;
+
+    .element{
+        left: auto;
+        right: 0;
+    }
+
+    .services-container{
+        max-width: 1380px;
+        padding: 100px 40px;
+
+        margin: auto;
+
+        h6{
+            @media(max-width: 768px){
+                text-align: center;
+            }
+        }
+
+        h2{
+            width: 500px;
+
+            @media(max-width: 768px){
+                width: auto;
+
+                text-align: center;
+            }
+        }
+
+        .learn-more{
+            margin: 40px auto 0 auto;
+        }
+
+        .services-grid{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(308px, 1fr));
+            justify-content: space-between;
+            gap: 20px;
+
+            .services-grid-container{
+                background-color: white;
+
+                display:grid;
+                grid-template-rows: auto auto 1fr;
+
+                height: 330px;
+
+                h4{
+                    font-size: 20px;
+
+                    margin: 0 25px;
+
+                    &::before{
+                        content: '';
+
+                        display:block;
+
+                        height: 2px;
+                        width: 40px;
+
+                        margin: 40px 0 30px 0;
+    
+                        background-color: black;
+                    }
+                }
+
+                p{
+                    margin: 10px 25px;
+                    margin-bottom: 0;
+                }
+
+                div{
+                    display: flex;
+                    justify-content: end;
+                    align-items: center;
+
+                    a{
+                        width: 58px;
+                        height: 58px;
+
+                        border-radius: 50%;
+
+                        background-color: black;
+
+                        color: white;
+                        text-decoration: none;
+                        font-size: 25px;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        margin-right: 30px;
+
+                        &:hover{
+                            background-color: white;
+
+                            color: black;
+
+                            border: 1px solid black
+                        }
+                    }
+                }
+            }
+
+            .startup{
+                background-color: #F9D783;
+
+                div{
+                    a{
+                        background-color: white;
+    
+                        color: black;
+
+                        &:hover{
+                            background-color: black;
+
+                            color: white;
+
+                            border: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
