--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,26 @@ h6 {
   font-size: 17px;
   font-weight: 600;
 }
+@media (max-width: 768px) {
+  h6 {
+    text-align: center;
+  }
+}
+
+h4 {
+  font-size: 20px;
+}
 
 h2 {
   font-size: 42px;
   margin: 0;
   margin-top: 15px;
   margin-bottom: 33px;
+}
+@media (max-width: 768px) {
+  h2 {
+    text-align: center;
+  }
 }
 
 .login-button {
@@ -587,8 +601,7 @@ header .header-container .header .menu i {
   font-size: 30px;
   margin-bottom: 13px;
 }
-.features-section .features-grid .features-grid-container h3 {
-  font-size: 20px;
+.features-section .features-grid .features-grid-container h4 {
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -629,9 +642,11 @@ header .header-container .header .menu i {
   position: absolute;
   top: 40px;
   left: -30px;
+  width: auto;
 }
 @media (max-width: 768px) {
   .about-section .woman-container .element {
+    display: block;
     width: 150px;
     top: 30px;
     left: -20px;
@@ -656,7 +671,6 @@ header .header-container .header .menu i {
 }
 .about-section .woman-container h4 {
   margin: 30px 0 20px 30px;
-  font-size: 20px;
 }
 .about-section .woman-container h4 span {
   font-size: 16px;
@@ -669,17 +683,13 @@ header .header-container .header .menu i {
   display: grid;
   grid-template-rows: auto auto 1fr auto;
   margin-left: 30px;
-  margin-top: 30px;
+  margin-top: 50px;
   max-width: 533px;
 }
 @media (max-width: 768px) {
   .about-section .about-container {
-    margin: 30px auto;
-  }
-}
-@media (max-width: 768px) {
-  .about-section .about-container h6 {
-    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 .about-section .about-container h2 {
@@ -687,7 +697,6 @@ header .header-container .header .menu i {
 }
 @media (max-width: 768px) {
   .about-section .about-container h2 {
-    text-align: center;
     margin-right: 8px;
     margin-left: 8px;
   }
@@ -763,8 +772,8 @@ header .header-container .header .menu i {
   margin: auto;
 }
 @media (max-width: 768px) {
-  .services-section .services-container h6 {
-    text-align: center;
+  .services-section .services-container {
+    padding: 100px 20px;
   }
 }
 .services-section .services-container h2 {
@@ -773,7 +782,6 @@ header .header-container .header .menu i {
 @media (max-width: 768px) {
   .services-section .services-container h2 {
     width: auto;
-    text-align: center;
   }
 }
 .services-section .services-container .learn-more {
@@ -792,7 +800,6 @@ header .header-container .header .menu i {
   height: 330px;
 }
 .services-section .services-container .services-grid .services-grid-container h4 {
-  font-size: 20px;
   margin: 0 25px;
 }
 .services-section .services-container .services-grid .services-grid-container h4::before {
@@ -841,4 +848,120 @@ header .header-container .header .menu i {
   background-color: black;
   color: white;
   border: none;
+}
+
+.choose-us-section {
+  position: relative;
+}
+.choose-us-section .box {
+  height: 55%;
+  width: 53%;
+  z-index: 998;
+  position: absolute;
+  right: 0;
+  bottom: 60px;
+  background-color: #F0EFE9;
+}
+@media (max-width: 768px) {
+  .choose-us-section .box {
+    display: none;
+  }
+}
+.choose-us-section .choose-us-container {
+  max-width: 1380px;
+  padding: 60px 40px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .choose-us-section .choose-us-container {
+    padding: 60px 20px;
+  }
+}
+.choose-us-section .choose-us-container .choose-us-header h2 {
+  margin-bottom: 0;
+  width: 60%;
+}
+@media (max-width: 1200px) {
+  .choose-us-section .choose-us-container .choose-us-header h2 {
+    width: 90%;
+  }
+}
+@media (max-width: 992px) {
+  .choose-us-section .choose-us-container .choose-us-header h2 {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .choose-us-section .choose-us-container .choose-us-header .choose-us-grid {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  }
+}
+.choose-us-section .choose-us-container .choose-us-header .choose-us-grid .choose-us-header-container {
+  display: flex;
+  margin-top: 45px;
+}
+@media (max-width: 768px) {
+  .choose-us-section .choose-us-container .choose-us-header .choose-us-grid .choose-us-header-container {
+    justify-content: center;
+  }
+}
+.choose-us-section .choose-us-container .choose-us-header .choose-us-grid .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 25px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 62px;
+  padding: 0 15px;
+  border: 1px solid rgb(214, 214, 214);
+  border-radius: 50%;
+}
+.choose-us-section .choose-us-container .choose-us-header .choose-us-grid .icon i {
+  font-size: 30px;
+}
+.choose-us-section .choose-us-container .choose-us-header .choose-us-grid .text h4 {
+  margin: 0;
+}
+.choose-us-section .choose-us-container .choose-us-header .choose-us-grid .text p {
+  margin: 0;
+  margin-top: 5px;
+}
+@media (max-width: 992px) {
+  .choose-us-section .choose-us-container .choose-us-header .choose-us-grid .text p {
+    width: 95%;
+  }
+}
+@media (max-width: 768px) {
+  .choose-us-section .choose-us-container .choose-us-header .choose-us-grid .text p {
+    width: 100%;
+  }
+}
+.choose-us-section .choose-us-container img {
+  z-index: 999;
+}
+@media (max-width: 1400px) {
+  .choose-us-section .choose-us-container img {
+    width: 500px;
+  }
+}
+@media (max-width: 1200px) {
+  .choose-us-section .choose-us-container img {
+    width: 450px;
+  }
+}
+@media (max-width: 992px) {
+  .choose-us-section .choose-us-container img {
+    width: 350px;
+  }
+}
+@media (max-width: 768px) {
+  .choose-us-section .choose-us-container img {
+    display: none;
+  }
 }
