--- a/css/style.scss
+++ b/css/style.scss
@@ -84,8 +84,6 @@ h2{
     &:hover{
         color: black;
 
-        border: 1px solid rgb(110, 110, 110);
-
         background-color: rgba(0, 0, 0, 0.048);
     }
 }
@@ -1144,6 +1142,179 @@ header{
 
             @media (max-width: 768px){
                 display:none;
+            }
+        }
+    }
+}
+
+.projects-section{
+    .projects-section-container{
+        max-width: 1380px;
+        padding: 60px 40px;
+
+        margin: auto;
+
+        h6{
+            text-align: center;
+        }
+
+        h2{
+            text-align: center;
+        }
+
+        .projects-grid{
+            display:grid;
+            grid-template-columns: repeat(auto-fit, 645px);
+            gap: 10px;
+            justify-content: center;
+
+            margin-top: 60px;
+
+            @media (max-width: 768px){
+                grid-template-columns: repeat(auto-fit, 340px);
+            }
+
+            .projects-grid-container{
+                margin-bottom: 25px;
+
+                img{
+                    @media (max-width: 768px){
+                        width: 340px;
+                    }
+                }
+                h4{
+                    margin-bottom: 10px;
+                }
+                div{
+                    border-top: 2px solid #ebebeb;
+
+                    display: flex;
+                    justify-content: end;
+                    align-items: center;
+
+                    a{
+                        text-decoration: none;
+
+                        color: black;
+
+                        margin: 25px;
+
+                        &:hover{
+                            color:#5a5a5a;
+                        }
+                    }
+                }
+            }
+        }
+
+        .learn-more{
+            margin: auto;
+            margin-top: 10px;
+
+            background-color: black;
+            border: none;
+
+            color: white;
+
+            width: 250px;
+
+            &:hover{
+                background-color: white;
+                border: 1px solid black;
+
+                color: black;
+            }
+        }
+    }
+}
+
+.team-section{
+    background-color: #F0D082;
+
+    .team-section-container{
+        max-width: 1380px;
+        padding: 60px 40px;
+
+        margin: auto;
+
+        .team-header{
+            display: flex;
+            justify-content: space-between;
+            align-items: end;
+
+            margin-bottom: 60px;
+
+            @media (max-width: 768px){
+                display: block;
+            }
+
+            .team-header-container{
+                h2{
+                    margin-bottom: 0;
+                }
+            }
+
+            .learn-more{
+                margin-left: 25px;
+
+                @media (max-width: 768px){
+                    margin: auto;
+                    margin-top: 25px;
+                }
+            }
+        }
+
+        .team-grid{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, 308px);
+            justify-content: space-around;
+            
+            .team-grid-container{
+                h4{
+                    margin-bottom: 2px;
+                    margin-top: 20px;
+                }
+                p{
+                    margin-top: 0;
+                }
+
+                margin-bottom: 20px;
+            }
+        }
+
+        .dot-container{
+            width: 120px;
+
+            margin: auto;
+
+            display: flex;
+            justify-content: space-between;
+            
+            button{
+                height: 12px;
+                width: 12px;
+
+                border-radius: 50%;
+                border: none;
+
+                background-color: rgba(0, 0, 0, 0.2);
+
+                cursor: pointer;
+
+                &:hover{
+                    outline: 2px solid rgba(0, 0, 0, 0.2);
+
+                }
+            }
+
+            #here{
+                background-color: black;
+
+                &:hover{
+                    outline: none;
+
+                    cursor:auto;
+                }
             }
         }
     }
